force-app/main/default/objects/Division__c/Division__c.object-meta.xml
<CustomObject>
    <label>Division</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>