force-app/main/default/objects/Division__c/fields/anoEscolar__c.field-meta.xml
<CustomField>
    <fullName>anoEscolar__c</fullName>
    <label>Año escolar</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>