force-app/main/default/objects/Division__c/fields/Capacidad__c.field-meta.xml
<CustomField>
    <fullName>Capacidad__c</fullName>
    <description>Capacidad maxima de alumnos</description>
    <label>Capacidad</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>