force-app/main/default/objects/Division__c/fields/cicloLectivo__c.field-meta.xml
<CustomField>
    <fullName>cicloLectivo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ciclo Lectivo</label>
    <referenceTo>cicloLectivo__c</referenceTo>
    <relationshipLabel>Divisiones</relationshipLabel>
    <relationshipName>Divisiones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>