force-app/main/default/objects/Division__c/fields/estado__c.field-meta.xml
<CustomField>
    <fullName>estado__c</fullName>
    <formula>cicloLectivo__r.Estado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>