force-app/main/default/objects/Division__c/fields/esVigente__c.field-meta.xml
<CustomField>
    <fullName>esVigente__c</fullName>
    <formula>cicloLectivo__r.esVigente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Vigente</label>
    <type>Checkbox</type>
</CustomField>