force-app/main/default/objects/Division__c/fields/inscriptos__c.field-meta.xml
<CustomField>
    <fullName>inscriptos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inscriptos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>