force-app/main/default/objects/Division__c/fields/nombre__c.field-meta.xml
<CustomField>
    <fullName>nombre__c</fullName>
    <formula>Text(anoEscolar__c) + &apos; &apos; + subdivision__c  +  &apos; &apos; + Text(Year(cicloLectivo__r.inicio__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nombre</label>
    <type>Text</type>
</CustomField>