force-app/main/default/objects/Division__c/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <formula>cicloLectivo__r.Programa__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programa</label>
    <type>Text</type>
</CustomField>