force-app/main/default/objects/Division__c/fields/proxima__c.field-meta.xml
<CustomField>
    <fullName>proxima__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proxima Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Divisiones</relationshipLabel>
    <relationshipName>Divisiones</relationshipName>
    <type>Lookup</type>
</CustomField>