force-app/main/default/objects/Division__c/fields/subdivision__c.field-meta.xml
<CustomField>
    <fullName>subdivision__c</fullName>
    <label>subdivision</label>
    <length>20</length>
    <type>Text</type>
</CustomField>