force-app/main/default/objects/Division__c/fields/vacantes__c.field-meta.xml
<CustomField>
    <fullName>vacantes__c</fullName>
    <formula>IF(AND(Capacidad__c &gt; 0, inscriptos__c &gt; 0) , Capacidad__c - inscriptos__c, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>