force-app/main/default/objects/Division__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>nombre__c</columns>
    <columns>anoEscolar__c</columns>
    <columns>subdivision__c</columns>
    <columns>cicloLectivo__c</columns>
    <columns>esVigente__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>