force-app/main/default/objects/Division__c/listViews/Humanidades.listView-meta.xml
<ListView>
    <fullName>Humanidades</fullName>
    <columns>NAME</columns>
    <columns>anoEscolar__c</columns>
    <columns>subdivision__c</columns>
    <columns>inscriptos__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>estado__c</field>
        <operation>equals</operation>
        <value>Vigente</value>
    </filters>
    <filters>
        <field>Programa__c</field>
        <operation>equals</operation>
        <value>Humanidades</value>
    </filters>
    <label>Turno Mañana</label>
</ListView>