force-app/main/default/objects/Division__c/listViews/Informatica.listView-meta.xml
<ListView>
    <fullName>Informatica</fullName>
    <columns>NAME</columns>
    <columns>anoEscolar__c</columns>
    <columns>inscriptos__c</columns>
    <columns>vacantes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>estado__c</field>
        <operation>equals</operation>
        <value>Vigente</value>
    </filters>
    <filters>
        <field>Programa__c</field>
        <operation>equals</operation>
        <value>Informatica</value>
    </filters>
    <label>Turno Tarde</label>
</ListView>